# zipremove

./: .gitattributes  .gitignore  CHANGELOG.md  README.md  pyproject.toml  requirements-build.txt  requirements-lint.txt  setup.cfg  setup.py  tox.ini
.github/workflows/: release.yml  test.yml
src/zipremove/: __init__.py
tests/: test_zipfile.py  test_zipfile64.py
