[build-system]
requires = ["setuptools>=77.0.3", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "zipremove"
version = "0.7.1"
requires-python = "~=3.9"
description = "Extend `zipfile` with `remove`-related functionalities"
readme = "README.md"
license = "MIT"
license-files = ["LICENSE.*"]
authors = [
    {name = "Danny Lin", email = "danny0838@gmail.com"},
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Topic :: System :: Archiving :: Compression",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Operating System :: OS Independent",
]

[project.urls]
Homepage = "https://github.com/danny0838/zipremove"

[dependency-groups]
lint = [
    "flake8>=6.1",
    "Flake8-pyproject>=1.2.3",
    "flake8-comprehensions>=3.12",
    "flake8-bugbear>=22.6.22",
    "flake8-isort>=6.1",
    "isort>=5.9.2",
]
build = [
    "tox>=4.3.3",
]
dev = [
    {include-group = "lint"},
    {include-group = "build"},
]

[tool.flake8]
exclude = [
    ".git",
    ".venv",
    ".tox",
    "__pycache__",
    "build",
    "setup.py",
]
max-line-length = 130

# Flake8 Rules
# https://www.flake8rules.com/
ignore = [
    "E122",
    "E226",
    "E302",
    "E305",
    "F403",
    "F405",
    "W504",
]

[tool.isort]
multi_line_output = 3
include_trailing_comma = true
extend_skip = [
    "setup.py",
]
