[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "zipremove"
version = "0.9.2"
requires-python = "~=3.7"
description = "Extend `zipfile` with remove-related capabilities"
readme = "README.md"

# Use dynamic license (and provide it in setup.py) since the format introduced
# by PEP 639 requires setuptools>=77.0.3, which does not support Python < 3.9.
# ref: https://packaging.python.org/en/latest/guides/writing-pyproject-toml/#license
dynamic = ["license"]

authors = [
    {name = "Danny Lin", email = "danny0838@gmail.com"},
]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "Topic :: System :: Archiving :: Compression",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Programming Language :: Python :: 3.15",
    "Operating System :: OS Independent",
]

[project.urls]
Homepage = "https://github.com/danny0838/zipremove"

[dependency-groups]
lint = [
    "flake8>=6.1",
    "Flake8-pyproject>=1.2.3",
    "flake8-comprehensions>=3.12",
    "flake8-bugbear>=22.6.22",
    "flake8-isort>=6.1",
    "isort>=5.9.2",
]
build = [
    "tox>=4.21.2",
]
dev = [
    {include-group = "lint"},
    {include-group = "build"},
]

[tool.flake8]
exclude = [
    ".git",
    ".venv",
    ".tox",
    "__pycache__",
    "build",
]
max-line-length = 130

# Flake8 Rules
# https://www.flake8rules.com/
ignore = [
    "E122",
    "E226",
    "E302",
    "E305",
    "F405",
    "W504",
]

[tool.isort]
multi_line_output = 3
include_trailing_comma = true

# skip directories included by default
# ref: https://pycqa.github.io/isort/docs/configuration/options.html
# extend_skip = []

[tool.tox]
env_list = ["py315", "py314", "py313", "py312", "py311", "py310", "py39", "py38", "py37"]
min_version = "4.22"

[tool.tox.env_run_base]
description = "run unit tests"
package = "editable"
pass_env = ["TEST_RESOURCES"]
commands = [["python", "-m", "unittest", {replace = "posargs", extend = true}]]

[tool.tox.env.release]
description = "build and release to PyPI"
package = "skip"
deps = [
    "build",
    "twine>=4.0",
]
pass_env = [
    "TWINE_USERNAME",
    "TWINE_PASSWORD",
]
commands = [
    ["python", "-m", "build", "--sdist", "--wheel"],
    ["python", "-m", "twine", "upload", "--skip-existing", "dist/*"],
]

[tool.tox.env.lint]
description = "lint source code"
package = "skip"
dependency_groups = ["lint"]
commands = [["flake8", {replace = "posargs", default = ["."], extend = true}]]

[tool.tox.env.isort]
description = "sort imports for the source code"
package = "skip"
dependency_groups = ["lint"]
commands = [["isort", {replace = "posargs", default = ["."], extend = true}]]
